# cookbook

./: .gitignore  README.md
apps/agent-command-center-cli/: .env.example  README.md  agent.py  ai-setup.md  requirements.txt
apps/ai-consensus/: .gitignore  README.md  ai-setup.md  analyze.py  app.py  fetch.py  prerequisites.md  questions.json  requirements.txt
apps/amazon-price-tracker/: .env.example  .gitignore  README.md  ai-setup.md  dashboard.py  phase1_collect.py  phase1_process.py  phase3_process.py  phase4_process.py  prerequisites.md  requirements.txt
apps/assortment-gap-finder/: .env.example  .gitignore  README.md  ai-setup.md  app.py  config.py  delta.py  discover.py  gaps.py  linear_client.py  mine.py  requirements.txt  setup_agents.py  synth.py  wsa.py
apps/competitor-battlecard-generator/: .env.example  .gitignore  README.md  ai-setup.md  app.py  collect.py  prerequisites.md  requirements.txt
apps/competitor-intelligence-monitor/: AGENT_SETUP.md  README.md
apps/deal-monitor/: .env.example  COOKBOOK.md  README.md  agent.py  ai-setup.md
apps/diligence-desk/: .env.example  .gitignore  README.md  app.py  (+9 more)
claude-managed-agents/: README.md
databricks/: 00_prereqs.md  01_setup.sql  02_amazon_serp.sql  ADDING_A_TOOL.md  INSTALL.md  NIMBLE_ENDPOINTS.md  README.md
langchain/: databricks_nimble_agent_tutorial.ipynb
langchain/web_agent_cli/: .env.example  README.md  main.py  prompts.py  pyproject.toml  terminal_ui.py
nimble-mcp-server/: README.md
snowflake/: 01_setup.sql  02_nimble_search.sql  03_nimble_extract.sql  04_cortex_agent.sql  README.md
(+768 files in other folders)
