[project]
name = "simple-web-agent"
version = "0.1.0"
description = "A LangChain-powered web agent using Nimble tools and Claude for intelligent web research and data extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "langchain-nimble>=2.0.0",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]
