[project]
name = "nimble-web-agent"
version = "0.1.0"
description = "A LangChain-powered web agent using Nimble tools and Claude for intelligent web research and data extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "langchain>=1.1.3,<2.0.0",
    "langchain-anthropic>=1.2.0,<2.0.0",
    "langchain-nimble>=2.0.0,<3.0.0",
    "prompt-toolkit>=3.0.52,<4.0.0",
    "rich>=14.2.0,<15.0.0",
]
